--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+ background-color: rgb(15 23 42);  
+}
+
 h1 {
-    text-align: center;
-    margin-top: 230px;
     font-size: 90px;
     font-weight: 550;
 }    
